added button function in diary

--- a/pages/diary.html
+++ b/pages/diary.html
@@ -32,7 +32,7 @@
 
             <h2 style="justify-self: center;">Текущие курсы</h2>
             <div class="diary-courses">
-                <ul>
+                <ul class="diary-corses-list">
                     <div class="Web-developmentcourse">
                         <label for="Web-developmentcourse">Веб-разработка</label>
                         <progress id="Web-developmentcourse" max="100" value="90">90%</progress><span>90%</span>
