--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0б viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewportfit=cover">
     <title>Главная</title>
     <link rel="stylesheet" href="../styles/style.css">
 </head>
+
 <body>
-    <header>
+    <a class="skip-link" href="#main">Перейти к основному содержимому</a>
+    <header class="main-header">
         <h1 style="justify-self: center;">Никита</h1>
-        <nav class="nav">
-            <ul class="nav-list">
-                <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
-                <li class="nav-item"><a class="nav-link" href="../pages/projects.html">Проекты</a></li>
-                <li class="nav-item"><a class="nav-link" href="../pages/diary.html">Дневник</a></li>
-                <li class="nav-item"><a class="nav-link active" href="../pages/contacts.html">Контакты</a></li>
-            </ul>
-        </nav>
     </header>
+
+    <nav class="nav">
+        <ul class="nav-list">
+            <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+            <li class="nav-item"><a class="nav-link" href="../pages/projects.html">Проекты</a></li>
+            <li class="nav-item"><a class="nav-link" href="../pages/diary.html">Дневник</a></li>
+            <li class="nav-item"><a class="nav-link active" href="../pages/contacts.html">Контакты</a></li>
+        </ul>
+    </nav>
 
     <main>
         <div class="contacts">
@@ -33,12 +37,13 @@
                     <label for="email">Email: </label>
                     <input type="email" name="email" id="email" placeholder="Введите ваш email" required>
                 </div>
-                
+
                 <div class="contacts-form-message">
                     <label for="message">Сообщение: </label>
-                    <textarea id="message" class="form-message-textarea" placeholder="Введите ваше сообщение..." rows="6" required></textarea>
+                    <textarea id="message" class="form-message-textarea" placeholder="Введите ваше сообщение..."
+                        rows="6" required></textarea>
                 </div>
-                
+
                 <button type="submit" id="contacts-form-button">Отправить сообщение</button>
             </form>
 
@@ -58,4 +63,5 @@
         <p class="footer-text">@ 2025 Контакты</p>
     </footer>
 </body>
+
 </html>
