--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewportfit=cover">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+
     <title>Главная</title>
+
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -15,7 +18,7 @@
 
     </header>
 
-    <nav class="nav">
+    <nav class="nav" aria-label="Основная навигация">
         <ul class="nav-list">
             <li class="nav-item"><a class="nav-link active" href="index.html">Главная</a></li>
             <li class="nav-item"><a class="nav-link" href="pages/projects.html">Проекты</a></li>
@@ -27,8 +30,9 @@
     <main id="main">
         <div class="main">
             <div class="main-info">
+                
                 <div class="main-info-photo">
-                    <img src="images/photo.jpg" alt="Photo">
+                    <img src="images/photo.jpg" alt="Photo" width="300" height="400">
                 </div>
 
                 <div class="main-info-text">
