--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 
 <head>
+    <meta name="description" content="Сайт-портфолио Никиты, студента группы ЭФБО-99-99. Увлекаюсь веб-разработкой, HTML/CSS, JavaScript, React. Посмотрите мои проекты и навыки.">
     <meta charset="UTF-8">
 
     <!-- FIX: viewport-fit -->
@@ -22,11 +23,14 @@
     </header>
 
     <!-- FIX: aria-label добавлен -->
-    <nav class="nav" role="navigation" aria-label="Основная навигация">
-        <ul class="nav-list">
+    <nav class="nav" aria-label="Основная навигация">
+        <ul class="main-nav-list">
             <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
             <li class="nav-item"><a class="nav-link active" href="../pages/projects.html">Проекты</a></li>
             <li class="nav-item"><a class="nav-link" href="../pages/diary.html">Дневник</a></li>
+        </ul>
+
+        <ul class="second-nav-list">
             <li class="nav-item"><a class="nav-link" href="../pages/contacts.html">Контакты</a></li>
         </ul>
     </nav>
