added animations, adaptivity and some descriptions

--- a/pages/diary.html
+++ b/pages/diary.html
@@ -33,6 +33,7 @@
     <main id="main" class="main">
         <div class="container diary">
             <button id="diary-courses-button" class="button">Добавить запись</button>
+
             <!-- Раздел «Учебный прогресс» -->
             <section class="diary-progress" aria-labelledby="progress-title">
                 <h2 id="progress-title" class="section-title">Мой учебный прогресс</h2>
@@ -63,7 +64,6 @@
                             <span>50%</span>
                         </li>
                     </ul>
-
                 </div>
             </section>
 
@@ -75,6 +75,7 @@
     </footer>
 
     <script src="../scripts/diaryButton.js"></script>
+    <script src="../scripts/diary.js"></script>
 </body>
 
 </html>
