--- a/pages/projects.html
+++ b/pages/projects.html
@@ -86,6 +86,7 @@
         <p class="footer-text">© 2025 Контакты</p>
     </footer>
 
+    <script src="../scripts/projects.js"></script>
 </body>
 
 </html>
