--- a/index.html
+++ b/index.html
@@ -33,39 +33,56 @@
         <div class="main">
             <section class="main-info" aria-labelledby="about-me">
                 <div class="main-info-photo">
-                    <picture>
-                        <!-- AVIF -->
-                        <source type="image/avif" srcset="
-                images/avif/photo-150.avif 150w,
-                images/avif/photo-300.avif 300w,
-                images/avif/photo-600.avif 600w,
-                images/avif/photo-default.avif 1200w
-              " sizes="(max-width: 768px) 300px, 700px">
-
-                        <!-- WebP -->
-                        <source type="image/webp" srcset="
-                images/webp/photo-150.webp 150w,
-                images/webp/photo-300.webp 300w,
-                images/webp/photo-600.webp 600w,
-                images/webp/photo-default.webp 1200w
-              " sizes="(max-width: 768px) 300px, 700px">
-
-                        <!-- JPEG fallback -->
-                        <img src="images/jpg/photo-300.jpg" srcset="
-                images/jpg/photo-150.jpg 150w,
-                images/jpg/photo-300.jpg 300w,
-                images/jpg/photo-600.jpg 600w,
-                images/jpg/photo-default.jpg 1200w
-              " sizes="(max-width: 768px) 300px, 700px" width="700" height="933" alt="Портрет студента" loading="lazy"
-                            decoding="async">
-                    </picture>
+                    <img src="images/jpg/minion.jpg">
                 </div>
 
                 <div class="main-info-info" id="about-me">
-                    <p>Привет, я студент группы ЭФБО-99-99. Увлекаюсь веб-разработкой.</p>
-                    <button class="button" id="resume-button">Скачать резюме</button>
+
+                    <section class="main-info-info-txt">
+                        <div class="main-info-info-text">
+                            <h2>Print("Привет мир!")</h2>
+                            <p>Невероятная, невооброзиамая html страничка напичканная css стилями</p>
+                            <button class="button" id="resume-button">Скачать резюме</button>
+                        </div>
+                    </section>
+
+
+                    <section class="main-info-info-ach">
+                        <h2>Мои достижения</h2>
+                        <div class="main-info-info-achievments">
+                            <button id="prev-button" class="ach-button">&lt;</button>
+
+                            <div class="achievment-view">
+                                <div class="ach-list">
+                                    <div class="ach">
+                                        <button id="dota-hours" class="ach-item"><img
+                                                src="images/png/dota2.png"></button>
+
+                                    </div>
+
+                                    <div class="ach">
+                                        <button id="dota-hours" class="ach-item"><img src="images/avif/mylo.avif"></button>
+                                    </div>
+
+                                    <div class="ach">
+                                        <button id="dota-hours" class="ach-item"><img src="images/jpg/lion.jpg"></button>
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <button id="next-button" class="ach-button">&gt;</button>
+                        </div>
+
+                        <div class="ach-explanation visible" id="ach-explanation">
+                            <p id="ach-explanation-text">Отсутствие личной жизни с 9 класса на протяжении 4000 ч.</p>
+                        </div>
+                    </section>
+
                 </div>
             </section>
+            <script src="scripts/achievmets.js"></script>
             <script src="scripts/downloadResumeButton.js"></script>
 
             <section class="main-skills-area" aria-labelledby="skills-title">
@@ -113,6 +130,8 @@
     <footer id="footer" role="contentinfo">
         <p class="footer-text">© 2025 Контакты</p>
     </footer>
+
+    <script src="scripts/index.js"></script>
 </body>
 
 </html>
