--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -94,6 +94,7 @@
     </footer>
 
     <script src="../scripts/contactsButton.js"></script>
+    <script src="../scripts/contacts.js"></script>
 </body>
 
 </html>
